Entity object and initial migration added

--- a/src/SIENN.WebApi/appsettings.json
+++ b/src/SIENN.WebApi/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "ConnectionStrings": {
+    "SQLite": "DataSource=app.db",
+    "OnePostgres": "Server=localhost;Port=5432;Database=sienna_store;User Id=postgres;Password=SiennaPass#0Rd"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
