CRUD actions implemented for all entities

--- a/src/SIENN.WebApi/SIENN.WebApi.csproj
+++ b/src/SIENN.WebApi/SIENN.WebApi.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SIENN.DbAccess\SIENN.DbAccess.csproj" />
+    <ProjectReference Include="..\SIENN.Services\SIENN.Services.csproj" />
   </ItemGroup>
 
 </Project>
