--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,18 @@ version: '2'
 services:
 
 
+  ##################################################
+  ##                    API                       ##
+  ##################################################
+
+  webapi-sienn:
+    build: ./
+    command: dotnet SIENN.WebApi.dll
+    ports:
+      - 8080:5000
+    environment: 
+      - ASPNETCORE_ENVIRONMENT=Development
+
 
   ##################################################
   ##                DATABASES                     ##
