Docker and deployment setup. Nginx. Config update

--- a/Deployment/Nginx/app/default.conf
+++ b/Deployment/Nginx/app/default.conf
@@ -1,4 +1,4 @@
-upstream rancher {
+upstream sienn {
     server webapi-sienn:5000;
 }
 
@@ -9,7 +9,7 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 8080 ssl;
-    server_name sienn;
+    server_name sienn_p;
     
     ssl_certificate /certs/letsencrypt/live/sienn.matrixservices.pl/fullchain.pem;
     ssl_certificate_key /certs/letsencrypt/live/sienn.matrixservices.pl/privkey.pem;
