--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,12 @@ services:
   ##                    API                       ##
   ##################################################
 
+  webapi-db-updater:
+    build: ./
+    command: /app/src/DbUpdate.sh    
+    environment: 
+      - ASPNETCORE_ENVIRONMENT=Development
+
   webapi-sienn:
     build: ./
     command: dotnet SIENN.WebApi.dll
@@ -13,7 +19,6 @@ services:
       - 5000:5000
     environment: 
       - ASPNETCORE_ENVIRONMENT=Development
-
 
   proxy-webapi-sienn:
     build: ./Deployment/Nginx
