--- a/src/SIENN.Services/SIENN.Services.csproj
+++ b/src/SIENN.Services/SIENN.Services.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>    
+    <PackageReference Include="AutoMapper" Version="6.2.2" />    
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />    
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />    
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\SIENN.DbAccess\SIENN.DbAccess.csproj" />
   </ItemGroup>
