Automapper. Fixed mapping and update for many-to-many relation

--- a/src/SIENN.WebApi/appsettings.Development.json
+++ b/src/SIENN.WebApi/appsettings.Development.json
@@ -3,6 +3,10 @@
     "SQLite": "DataSource=app.db",
     "OnePostgres": "Server=one-postgres;Port=5432;Database=sienna_store;User Id=postgres;Password=SiennaPass#0Rd"
   },  
+  // "ConnectionStrings": {
+  //   "SQLite": "DataSource=app.db",
+  //   "OnePostgres": "Server=localhost;Port=5432;Database=sienna_store;User Id=postgres;Password=SiennaPass#0Rd"
+  // }, 
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
